# ML_proj2

./: Learning-curves-experiment-mod-11.ipynb  Optimizer-experiments.ipynb  README.md  dataset.py  diego.ipynb  grok.ipynb  grok.py  pyproject.toml  requirements.txt  training.py  transformer.py
