[tool.poetry]
name = "ml-proj2"
version = "0.1.0"
description = ""
authors = ["ddorn <diego.dorn@free.fr>"]
license = "WTFPL"
readme = "README.md"
packages = [{include = "ml_proj2"}]

[tool.poetry.dependencies]
python = "^3.10"
permutation = "^0.4.0"
tensorboard = "^2.11.0"
torchtyping = "^0.1.4"
torch = "^1.13.1"
einops = "^0.6.0"
matplotlib = "^3.6.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.19.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
